src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>ACE_Architect__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ACE Architect</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.UserRole.Name</field>
                <operation>equals</operation>
                <value>Customer Success Rep</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Balance__c</fullName>
        <description>Total Account Balance from NetSuite.</description>
        <label>Account Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Account_ID__c</fullName>
        <formula>Id</formula>
        <label>Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Id_18_digit__c</fullName>
        <description>SFDC 18 digit id for use in LMS</description>
        <externalId>true</externalId>
        <label>Account Id 18 digit</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Overdue_Balance__c</fullName>
        <description>Overdue account balance from NetSuite</description>
        <label>Account Overdue Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Account_Owner_Company_Name__c</fullName>
        <formula>$User.CompanyName</formula>
        <label>Account Owner Company Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Owner_Profile__c</fullName>
        <formula>Owner.Profile.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Owner Profile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Target_Level__c</fullName>
        <description>Major Account (these have named account reps) 
Enterprise Account (a territory account - a key account in the patch) 
Standard Account (default)</description>
        <label>Account Target Level</label>
        <picklist>
            <picklistValues>
                <fullName>Major Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enterprise Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standard Account</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Actual_Churned_Date__c</fullName>
        <formula>IF(Last_End_Date__c &lt; Today(),Last_End_Date__c + 180, 
IF(ISPICKVAL(Customer_Status__c,&apos;Reactivated Customer&apos;),NULL,NULL))</formula>
        <label>Actual Churned Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Adoption_Score__c</fullName>
        <inlineHelpText>Please enter the adoption score here.</inlineHelpText>
        <label>Adoption Score</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Application_Stack__c</fullName>
        <description>This Field is used for Marketo mapping</description>
        <label>Application Stack</label>
        <picklist>
            <picklistValues>
                <fullName>.NET</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EUM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Java</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NodeJS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PHP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ruby on Rails</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Celigo_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Celigo Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Company_Email_Domain__c</fullName>
        <label>Company Email Domain</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Size__c</fullName>
        <label>Company Size</label>
        <picklist>
            <picklistValues>
                <fullName>Small (Revenue less than $100 million)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium (Revenue $100 million to less than $1Billion)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Large (Revenue $1 Billion +)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Competitor__c</fullName>
        <inlineHelpText>Please select all competitors at this account.</inlineHelpText>
        <label>Existing APM Solution(s)</label>
        <picklist>
            <picklistValues>
                <fullName>Compuware DynaTrace</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Relic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA Wily</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IBM ITCAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IBM Tivoli</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Microsoft Avicode</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opnet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OpTier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oracle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Precise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quest Foglight</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Controller_Version__c</fullName>
        <description>What is the current version of their installed AppDynamics Controller?</description>
        <label>Controller Version</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Count_of_Partner_Account_Opps__c</fullName>
        <description>Count of the opportunities with &quot;Partner Account Owner&quot; field populated</description>
        <label>Count of Partner Account Opps</label>
        <summaryFilterItems>
            <field>Opportunity.Partner_Account_Owner__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Created_by_Profile__c</fullName>
        <formula>CreatedBy.Profile.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created by Profile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Agent_Version__c</fullName>
        <description>What is the version of their installed AppDynamics agents?</description>
        <label>Current Agent Version</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Use_Cases__c</fullName>
        <inlineHelpText>What are the current use cases for AppDynamics at this account?</inlineHelpText>
        <label>Current Use Cases</label>
        <picklist>
            <picklistValues>
                <fullName>Alerting and Events on Policies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>App Transaction Flow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Transaction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dashboard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>End User Monitoring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Memory Monitoring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Orchestration/Bursting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Request Snapshot and Call Graph</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Customer_Relations_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Customer Success Manager who is attached to customer accounts</description>
        <label>Project Management Specialists</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Satisfaction_Comments__c</fullName>
        <label>Customer Satisfaction Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Satisfaction_Score__c</fullName>
        <description>Customer Sat Score from the last survey</description>
        <label>Customer Satisfaction Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_Status__c</fullName>
        <label>Customer Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Churned Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Former Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reactivated Customer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer_Tier__c</fullName>
        <description>Field to be used by customer success to tier customers. The field automatically updates.
Tier 1:
USD SUM amount - &lt;$100k
Type - customer
Overall status - needs attention or critical (can we add this to our drop-down?)


Tier 2:
USD Sum amount &lt;$100k
Type - customer
Overall status - good

Tier 3:
USD Sum Amount - greater than $100k and any amount under to accommodate those that just submitted a marketing piece
Type - customer/var/partner
Overall status- good
Customer Satisfaction comments - this is where I&apos;ll add any dates that they complete a marketing piece (case study, blog, etc.)</description>
        <inlineHelpText>This field automatically updates based on criteria.</inlineHelpText>
        <label>Customer Tier</label>
        <picklist>
            <picklistValues>
                <fullName>Tier 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tier 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tier 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tier 4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DBA_Account_Name__c</fullName>
        <formula>DandbCompany.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DBA Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSE__DS_Country_ISO_Code__c</fullName>
        <label>Country ISO Code</label>
        <picklist>
            <picklistValues>
                <fullName>AD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BJ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DSE__DS_DataScout_Process__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Cloud MDM: used internally for the data conversion process</description>
        <inlineHelpText>Cloud MDM: used internally for the data conversion process</inlineHelpText>
        <label>Converted from Cloud MDM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DSE__DS_Hierarchy_Level__c</fullName>
        <description>The level of this node in the hierarchy, starting from 1 (Ultimate Parent). A blank value means there is no hierarchy for this account</description>
        <inlineHelpText>The level of this node in the hierarchy, starting from 1 (Ultimate Parent). A blank value means there is no hierarchy for this account</inlineHelpText>
        <label>Hierarchy Level</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DSE__DS_Last_Updated__c</fullName>
        <label>Last Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DSE__DS_Legal_Form__c</fullName>
        <description>company&apos;s legal form</description>
        <label>Legal Form</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSE__DS_Synchronize__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Cloud MDM: synchronize Account data with Bean</description>
        <inlineHelpText>Cloud MDM: synchronize Account data with Bean</inlineHelpText>
        <label>Synchronize</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DSE__DS_Ultimate_Parent_Name__c</fullName>
        <description>Cloud MDM: Name of the Ultimate Parent Account</description>
        <inlineHelpText>Cloud MDM: Name of the Ultimate Parent Account</inlineHelpText>
        <label>Ultimate Parent Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSE__DS_Ultimate_Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Cloud MDM: Ultimate Parent Account</description>
        <inlineHelpText>Cloud MDM: Ultimate Parent Account</inlineHelpText>
        <label>Ultimate Parent</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Subsidiaries</relationshipLabel>
        <relationshipName>Subsidiaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DSE__Demo_Installed_Products__c</fullName>
        <label>Installed Products</label>
        <picklist>
            <picklistValues>
                <fullName>Dish Washer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fryer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>DSE__Domain__c</fullName>
        <label>Domain</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSE__X_Internal__c</fullName>
        <description>Used by Cloud MDM internally</description>
        <inlineHelpText>Used by Cloud MDM internally</inlineHelpText>
        <label>X_Internal</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>D_B_hierarchy_Domestic__c</fullName>
        <formula>DandbCompany.DomesticUltimateDunsNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>D&amp;B hierarchy Domestic</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>D_B_hierarchy_Parent__c</fullName>
        <formula>DandbCompany.ParentOrHqDunsNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>D&amp;B hierarchy Parent</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>D_B_hierarchy_global__c</fullName>
        <formula>DandbCompany.GlobalUltimateDunsNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>D&amp;B hierarchy Global</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Partner_Contract_Expires__c</fullName>
        <inlineHelpText>Please enter the expiration date of the current contract.</inlineHelpText>
        <label>Date VAR Contract Expires</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_TAM_Assigned_to_Account__c</fullName>
        <label>Date TAM Assigned to Account</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_VAR_Contract_Signed__c</fullName>
        <description>Date of the VAR contract.  This is needed for referencing on Quotes to lock the purchase to the contract.</description>
        <inlineHelpText>Enter the date that the VAR contract was signed.  This is needed for referencing on Quotes to lock the purchase to the contract.</inlineHelpText>
        <label>Date VAR Contract Signed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_Overdue__c</fullName>
        <label>Days Overdue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Since_Last_Activity__c</fullName>
        <formula>TODAY()-LastActivityDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since Last Activity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deployed_Environment_s__c</fullName>
        <label>Deployed Environment(s)</label>
        <picklist>
            <picklistValues>
                <fullName>Pre Production</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Development/QA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Production</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Deployment_Comments__c</fullName>
        <label>Deployment Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Deployment_Status__c</fullName>
        <label>Deployment Status</label>
        <picklist>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Started</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Deployment_Type__c</fullName>
        <inlineHelpText>Enter the customer&apos;s deployment model, Subscription or Perpetual</inlineHelpText>
        <label>Deployment Type</label>
        <picklist>
            <picklistValues>
                <fullName>Subscription</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Perpetual</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DoAssignTerritory__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DoAssignTerritory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Domain_Name__c</fullName>
        <description>Used with Account TM to set Region / Geo for FSR Account owners</description>
        <label>Domain Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EarliestOppBooked__c</fullName>
        <label>EarliestOppBooked</label>
        <summarizedField>Opportunity.Booked_Date__c</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>W10 - Closed/Won</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>FYE__c</fullName>
        <description>This field attribute was added to capture the Fiscal Year Ending provided by Inside View during the data cleansing/appending process in July 2012. Each # represents a month (1 - January, 2 - February, 3 - March, etc).</description>
        <label>FYE</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fortune_500__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fortune 500</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fortune_Ranking__c</fullName>
        <description>This field attribute was added to capture the Fortune Ranking provided by Inside View during the data cleansing/appending process in July 2012.</description>
        <label>Fortune Ranking</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Geo__c</fullName>
        <formula>text(Territory_AppD__r.Geo__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Geo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Global_2000__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Global 2000</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Global_Parent_Account_ID__c</fullName>
        <formula>ParentId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Global Parent Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Global_Sales_Segment_Reference_for_Child__c</fullName>
        <description>Though the original purpose is now obsolete with the updated Global Sales Segment formula (as of 8/17/2015), it&apos;s new use is defined in the 2nd line of the formula and it important for the Parent/Grandparent Account in a Hierarchy.</description>
        <formula>CASE(Parent.Sales_Segment_Roll_Up__c,
1,&apos;Tier 1-Expandables&apos;,
2,&apos;Tier 2-Dependents&apos;,
3,&apos;Tier 3-Opportunists&apos;,
4,&apos;Tier 4-Unclassified&apos;,NULL)

/* 183 characters */</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Global Sales Segment Reference for Child</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Global_Sales_Segment__c</fullName>
        <formula>IF(DSE__DS_Ultimate_Parent__r.SSRU__c&lt;Sales_Segment_Roll_Up__c,DSE__DS_Ultimate_Parent__r.SS2__c,
IF(ISBLANK(Global_Sales_Segment_Reference_for_Child__c),SS2__c, /*No hierarchy/parent-child relationship*/
IF(Sales_Segment_Roll_Up__c=1,&apos;Tier 1-Expandables&apos;,
IF(Sales_Segment_Roll_Up__c=2,&apos;Tier 2-Dependents&apos;,
IF(Sales_Segment_Roll_Up__c=3,&apos;Tier 3-Opportunists&apos;,
IF(Sales_Segment_Roll_Up__c=4,&apos;Tier 4-Unclassified&apos;,null
))))))

/*4,522*/</formula>
        <label>Global Sales Segment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Has_Global_D_B__c</fullName>
        <formula>D_B_hierarchy_global__c  &lt;&gt; NULL &amp;&amp;  DunsNumber  &lt;&gt; NULL</formula>
        <label>Has Global D&amp;B</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IT_Budget_M_Est__c</fullName>
        <description>Estimated IT Budget for the year</description>
        <label>IT Budget (M) Est.</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Industry_Normalised__c</fullName>
        <formula>DandbCompany.PrimarySicDesc</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Industry Normalised</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inside_View_ID__c</fullName>
        <description>This field attribute was added to capture the ID provided by Inside View during the data cleansing/appending process in July 2012.</description>
        <label>Inside View ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interim_TM_Owner__c</fullName>
        <description>Used to support the TM migration to production on 5/13/2015. This field will be removed following the migration period.</description>
        <label>Interim TM Owner</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsMigrated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsMigrated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Global_D_B__c</fullName>
        <formula>DunsNumber=D_B_hierarchy_global__c &amp;&amp; (DunsNumber&lt;&gt;NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Global D&amp;B</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Kickoff_Call__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Kickoff Call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Date_of_Customer_Response__c</fullName>
        <description>This field is used by the TAM team to track the date of their last conversation.</description>
        <inlineHelpText>Please enter the date of the last TAM conversation.</inlineHelpText>
        <label>Last Date of Customer Response</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Deployment_Status_Check__c</fullName>
        <description>The date when last customer outreach was done.</description>
        <label>Last Customer Outreach</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_End_Date__c</fullName>
        <label>Last End Date</label>
        <summarizedField>Opportunity.End_Date__c</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>W10 - Closed/Won</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Lead_Origin_Source__c</fullName>
        <externalId>true</externalId>
        <label>Lead Origin Source</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level_of_Interest_in_APM__c</fullName>
        <description>This field is used for Marketo mapping</description>
        <label>Level of Interest in APM</label>
        <picklist>
            <picklistValues>
                <fullName>Low: Gathering info only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moderate: May consider APM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High: Starting APM project</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Urgent: Want to buy APM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>License__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>License</label>
        <referenceTo>LicenseDetail__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lock_Customer_Tier__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lock Customer Tier</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Margin_Discount__c</fullName>
        <label>Margin Discount %</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>NAICS__c</fullName>
        <description>This field attribute was added to capture the Chosen NAICS provided by Inside View during the data cleansing/appending process in July 2012.</description>
        <label>NAICS</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NS_Sync__c</fullName>
        <label>NetSuite Sync</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Named_Account_Account_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Named Account Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NetSuite_Id__c</fullName>
        <label>NetSuite Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NetSuite_Locked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NetSuite Locked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NetSuite_Mapping__c</fullName>
        <label>NetSuite Mapping</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NetSuite_Pull__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NetSuite Pull</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NetSuite_Push__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NetSuite Push</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_Customer_Acquisition_Date__c</fullName>
        <label>New Customer Acquisition Date</label>
        <summarizedField>Opportunity.Booked_Date__c</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>W10 - Closed/Won</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.Deal_Type__c</field>
            <operation>notEqual</operation>
            <value>Training</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>No_Territory_Assignment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No Territory Assignment(Account)</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>